--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -5,7 +5,7 @@ header {
 }
 
 header h2 {
-  font-family: "Libre Baskerville", serif;
+  font-family: "Jost", sans-serif;
   font-size: 50px;
   font-weight: 700;
   line-height: 79.36px;
