--- a/src/index.css
+++ b/src/index.css
@@ -141,6 +141,12 @@ footer .input-group-text:focus {
   box-shadow: none;
 }
 
+footer hr {
+  border-radius: 1px;
+  background: rgba(255, 255, 255, 0.5);
+  color: rgba(255, 255, 255, 0.5);
+}
+
 footer .copy-right {
   font-family: "Jost", sans-serif;
   font-size: 16px;
@@ -171,7 +177,8 @@ footer .copy-right {
     font-size: 14px;
   }
 
-  footer ul li {
+  footer ul li,
+  footer ul a {
     font-size: 11px;
     line-height: 29.76px;
   }
