--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -202,6 +202,9 @@ header .line {
 }
 
 @media screen and (max-width: 576px) {
+  header {
+    padding-top: 20px;
+  }
   header h2 {
     color: rgba(51, 51, 51, 1);
   }
@@ -234,7 +237,7 @@ header .line {
   }
 
   header p {
-    font-size: 16px;
+    font-size: 14px;
     font-weight: 400;
   }
 
