--- a/src/css/Checkout.css
+++ b/src/css/Checkout.css
@@ -63,13 +63,14 @@
   text-transform: uppercase;
 }
 
-.payment .form-control {
-  border: 1px solid rgba(69, 43, 31, 1);
-  border-radius: 10px;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 23.12px;
-  color: rgba(0, 0, 0, 1);
+.payment .form-control,
+.form-select {
+  border: 1px solid rgba(69, 43, 31, 1) !important;
+  border-radius: 10px !important;
+  font-size: 14px !important;
+  font-weight: 400 !important;
+  line-height: 23.12px !important;
+  color: rgba(0, 0, 0, 1) !important;
 }
 
 .payment .form-control::placeholder {
@@ -79,9 +80,18 @@
   color: rgba(0, 0, 0, 0.5);
 }
 
-.payment .form-control:focus {
-  border: 1px solid rgba(69, 43, 31, 1);
-  box-shadow: 0 0 0 0.25rem rgba(69, 43, 31, 0.25);
+.payment .form-control:focus,
+.form-select:focus {
+  border: 1px solid rgba(69, 43, 31, 1) !important;
+  box-shadow: 0 0 0 0.25rem rgba(69, 43, 31, 0.25) !important;
+}
+
+.payment .form-select {
+  background-image: none !important;
+}
+
+.payment .muted-text {
+  color: rgba(0, 0, 0, 0.5) !important;
 }
 
 .payment .year {
