--- a/src/css/Checkout.css
+++ b/src/css/Checkout.css
@@ -64,13 +64,24 @@
 }
 
 .payment .form-control,
-.form-select {
+.payment .form-select {
   border: 1px solid rgba(69, 43, 31, 1) !important;
   border-radius: 10px !important;
   font-size: 14px !important;
   font-weight: 400 !important;
   line-height: 23.12px !important;
   color: rgba(0, 0, 0, 1) !important;
+}
+
+.payment .form-control.is-invalid,
+.payment .form-select.is-invalid {
+  border: 1px solid red !important;
+}
+
+.payment .form-control.is-invalid:focus,
+.payment .form-select.is-invalid:focus {
+  border: 1px solid red !important;
+  box-shadow: 0 0 0 0.25rem rgba(220, 53, 69, 0.25) !important;
 }
 
 .payment .form-control::placeholder {
